# OpenCV

./: Notes.txt  main.py  pyproject.toml
02/: main.py  main2.py
03/: draw.py  main(1).py  main.py  main2.py  rescale.py  resize.py  rotated.py
04/: blurring.py  color-channels.py  color-spaces.py  contour-detection.py
05/: bitwise.py  color-histogram.py  grayscale-histogram.py  masking.py  thresholding.py
06/: capture-webcam.py  cartooning-an-image.py  click-events.py  color-palette.py  drawing-with-mouse.py  read-frames.py  reverse-video.py  select-extract-crop.py  white-and-black-dot-detection.py
07/: app.py  background-subtraction.py  car-detection.py  face-detection-blur.py  gun-detection.py  invisible-t-shirt.py  object-tracking.py  ocr.py  pedestrian-detection.py  replace-green-screen.py  template-matching.py
11/: license-plate-detection.py
16/: live-screen-recorder.py
17/: face-recognizer.py
18/: filters.py  gesture_control.py  main.py
19/: barcode-1.py  barcode-2.py
