[project]
name = "mastering-opencv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlib",
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "imutils",
    "ipykernel",
    "matplotlib",
    "mediapipe>=0.10.21",
    "opencv-contrib-python",
    "pyautogui",
    "pytesseract",
    "pyzbar",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
dlib = { path = "dlib-19.24.99-cp312-cp312-win_amd64.whl" }
